Start adding k_v_store_benchmark code.

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,8 +20,10 @@ DEPENDENCY_TARGETS=hiredis linenoise lua
 NODEPS:=clean distclean
 
 # Default settings
-STD=-std=c99 -pedantic -DREDIS_STATIC=''
-WARN=-Wall -W -Wno-missing-field-initializers
+CC = gcc -std=gnu11
+CFLAGS = -pthread -Wno-unused-variable -Wno-unused-function
+STD=-DREDIS_STATIC=''
+# WARN=-Wall -W -Wno-missing-field-initializers
 OPT=$(OPTIMIZATION)
 
 PREFIX?=/usr/local
@@ -60,7 +62,7 @@ endif
 
 FINAL_CFLAGS=$(STD) $(WARN) $(OPT) $(DEBUG) $(CFLAGS) $(REDIS_CFLAGS)
 FINAL_LDFLAGS=$(LDFLAGS) $(REDIS_LDFLAGS) $(DEBUG)
-FINAL_LIBS=-lm
+FINAL_LIBS=-lm -levent -lzmq
 DEBUG=-g -ggdb
 
 ifeq ($(uname_S),SunOS)
